2009-03-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-choose-overlay-for-read-error): Extraced and
	extended from `slime-choose-overlay-region'. Differentiate between
	symbol-related reader-errors (package not found &c) and
	character-related reader-errors.
	(slime-choose-overlay-region): Use it.

2009-03-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (make-slime-buffer-location, make-slime-file-location):
	Do not default to (:hints), but to nil, as expected in the
	slime-side source-location machinery.

2009-03-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-choose-overlay-region): Special case :read-error
	notes regardless of position kind.

	* swank-sbcl.lisp (signal-compiler-condition): Return :READ-ERROR
	as severity for reader-errors.
	(compiler-note-location): Fix off-by-one when compiling from
	buffer.

2009-03-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-sbcl.lisp (compiling-from-buffer-p),
	(compiling-from-file-p)
	(compiling-from-generated-code-p): New helpers; extracted from
	LOCATE-COMPILER-NOTE.
	(locate-compiler-note): Use them.
	(compiler-note-location): Use them, too, to handle reader-errors
	when compiling from file. This completes 2009-02-27.

	Reported by Christian Lynbech.

2009-03-07  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([portability] getf): Redefine `getf' on Emacs21 to
	work on malformed plists like it does on later Emacsen. This made
	the `find-local-definitions' test case fail on Emacs21.

2009-03-04  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-check-fancy-symbol-name): Use
	`slime-test-expect' instead of `slime-check'.
	([test] fancy-symbol-names): Extend test case; check for
	"Foo" in #<Foo| {...}>.
	(slime-symbol-constituent-at-pos): Check for #<.

2009-03-04  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-wait-condition): Remove `save-excursion'; it
	made the `repl-test' test case fail because this test tries to set